[gd_scene load_steps=9 format=3 uid="uid://c2pea0ohjqxi5"]

[ext_resource type="Script" uid="uid://ba4a7icabujfo" path="res://scripts/victory_screen.gd" id="1_nxaog"]
[ext_resource type="Texture2D" uid="uid://blmu3ogum7hnr" path="res://assets/images/winner_background.jpeg" id="2_afr1r"]
[ext_resource type="PackedScene" uid="uid://dvbpse3xbc86v" path="res://scenes/characters/agui_player.tscn" id="3_x76ma"]
[ext_resource type="PackedScene" uid="uid://b7st2qy3hve72" path="res://scenes/characters/diego_player.tscn" id="4_ms0r3"]
[ext_resource type="PackedScene" uid="uid://bnn8uw247sqkf" path="res://scenes/characters/mazen_player.tscn" id="5_12ji3"]
[ext_resource type="FontFile" uid="uid://clh8mucu0exxe" path="res://assets/fonts/Minecraft.ttf" id="6_iwu4a"]

[sub_resource type="LabelSettings" id="LabelSettings_q7c2e"]
font = ExtResource("6_iwu4a")
font_size = 128
font_color = Color(0.376471, 1, 0.329412, 1)
outline_size = 50
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8q5mt"]
font = ExtResource("6_iwu4a")
font_size = 64
font_color = Color(1, 0, 0.345098, 1)
outline_size = 30
outline_color = Color(0, 0, 0, 1)

[node name="VictoryScreen" type="Node2D"]
script = ExtResource("1_nxaog")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1921.0
offset_bottom = 1081.0
texture = ExtResource("2_afr1r")

[node name="Agui_Winner" parent="." instance=ExtResource("3_x76ma")]
position = Vector2(482, 611)
scale = Vector2(5, 5)
motion_mode = 1

[node name="Agui_Loser" parent="." instance=ExtResource("3_x76ma")]
visible = false
position = Vector2(1551, 671)
scale = Vector2(3, 3)
motion_mode = 1

[node name="Diego_Winner" parent="." instance=ExtResource("4_ms0r3")]
visible = false
position = Vector2(442, 617)
scale = Vector2(5, 5)
motion_mode = 1

[node name="Diego_Loser" parent="." instance=ExtResource("4_ms0r3")]
position = Vector2(1388, 695)
scale = Vector2(3, 3)
motion_mode = 1

[node name="Mazen_Winner" parent="." instance=ExtResource("5_12ji3")]
visible = false
position = Vector2(401, 609)
scale = Vector2(5, 5)
motion_mode = 1

[node name="Mazen_Loser" parent="." instance=ExtResource("5_12ji3")]
visible = false
position = Vector2(1538, 677)
scale = Vector2(3, 3)
motion_mode = 1

[node name="Label" type="Label" parent="."]
offset_left = 258.0
offset_top = 76.0
offset_right = 762.0
offset_bottom = 204.0
text = "WINNER"
label_settings = SubResource("LabelSettings_q7c2e")

[node name="Label2" type="Label" parent="."]
offset_left = 1489.0
offset_top = 304.0
offset_right = 1717.0
offset_bottom = 368.0
text = "LOSER"
label_settings = SubResource("LabelSettings_8q5mt")
